--- a/src/styles/google-fonts.css
+++ b/src/styles/google-fonts.css
@@ -6,3 +6,6 @@
 
 /* IM Fell DW Pica SC */
 @import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=IM+Fell+DW+Pica+SC&family=Pirata+One&display=swap");
+
+/* Inter*/
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
