feat: updated user Panels and Forms

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,3 +81,10 @@ li.pageactive {
 .modal-height {
   height: calc(100% - 60px);
 }
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
